--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,14 +7,28 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    {% include "govuk-prototype-kit/includes/homepage-top.njk" %}
 
-    <h1 class="govuk-heading-xl">
-      {{ serviceName }}
-    </h1>
+    <form action="/check-text-router" method="post" novalidate>
 
-    {% include "govuk-prototype-kit/includes/homepage-bottom.njk" %}
-  </div>
+      <fieldset class="govuk-fieldset" role="group" aria-describedby="question-hint">
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+          <h1 class="govuk-fieldset__heading">
+            Enter the text you want to check
+          </h1>
+        </legend>
+        <div id="question-hint" class="govuk-hint">
+          Copy and paste the text directly from your designs
+        </div>
+        <textarea class="govuk-textarea" id="user-text" name="user-text" rows="20">{{data['user-text']}}</textarea>
+        <button class="govuk-button" type="submit" onclick="checkText()">Check text</button>
+      </fieldset>
+
+
+  </form>
+
+  <div id="results" class="govuk-body"></div>
+
+ 
 </div>
 
 {% endblock %}
