Adding a 'delete text' button

--- a/app/views/no-issues.html
+++ b/app/views/no-issues.html
@@ -15,7 +15,7 @@
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-    <a href="index.html" class="govuk-button">Check some different text</a>
+    <a href="index.html" class="govuk-button">Back to your text</a>
   
   </div>
  
