--- a/app/views/results.html
+++ b/app/views/results.html
@@ -13,7 +13,7 @@
       {{ results | safe }}
     </div>
 
-    <a href="index.html" class="govuk-button">Check some different text </a>
+    <a href="index.html" class="govuk-button">Back to your text </a>
   
   </div>
  
