--- a/app/views/index.html
+++ b/app/views/index.html
@@ -26,6 +26,11 @@
 
   </form>
 
+  <button onclick="clearText()" class="govuk-button govuk-button--warning" data-module="govuk-button">
+    Delete text
+  </button>
+  
+
   <div id="results" class="govuk-body"></div>
 
  
