--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -8,4 +8,5 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
 {% block scripts %}
   {{ super() }}
   <script src="/public/javascripts/text-checker.js"></script>
+  <script src="/public/javascripts/application.js"></script>
 {% endblock %}
