--- a/app/views/no-sentences.html
+++ b/app/views/no-sentences.html
@@ -7,10 +7,10 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <h1 class="govuk-heading-l" id="header">No issues found</h1>
+    <h1 class="govuk-heading-l" id="header">We can't check your text</h1>
 
     <p class="govuk-body">
-      Your content complies with <a href="https://www.gov.uk/guidance/style-guide/a-to-z">GOV.UK</a> and <a href="https://design.homeoffice.gov.uk/content-style-guide">Home Office</a> style rules.
+      You must enter at least 1 full sentence that includes punctuation.
     </p>
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
