Finish HODS style entries; start page guidance

--- a/app/views/no-issues.html
+++ b/app/views/no-issues.html
@@ -15,7 +15,7 @@
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
-    <a href="index.html#user-text" class="govuk-button">Back to your text</a>
+    <a href="check-text.html#user-text" class="govuk-button">Back to your text</a>
   
   </div>
  
