--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,33 +7,109 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
+  <h1 class="govuk-heading-l">
+    Style guide checker for content designers
+  </h1>
 
-    <form action="/check-text-router" method="post" novalidate>
+  <p class="govuk-body">
+    This tool checks if your content follows style guide rules. Copy and paste text into the text box and see if the content complies with different style guide rules.
+  </p>
 
-      <fieldset class="govuk-fieldset" role="group" aria-describedby="question-hint">
-        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-          <h1 class="govuk-fieldset__heading">
-            Enter the text you want to check
-          </h1>
-        </legend>
-        <div id="question-hint" class="govuk-hint">
-          Copy and paste the text directly from your designs
+  <a href="check-text.html" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+    Use the checker
+    <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
+      <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
+    </svg>
+  </a>
+
+  <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
+  <h2 class="govuk-heading-m">
+    What the checker will check
+  </h2>
+
+  <p class="govuk-body">The checker will flag:</p>
+
+  <ul class="govuk-list govuk-list--bullet">
+    <li>
+      words or abbreviations to avoid
+    </li>
+    <li>
+      for correct usage of terms
+    </li>
+    <li>
+      where capitalisation is incorrect on specific terms
+    </li>
+    <li>
+      if a specific term should be 1 word instead of 2 (or vice versa)
+    </li>
+  </ul>
+
+  <h2 class="govuk-heading-m">
+    What the checker won't check
+  </h2>
+
+  <p class="govuk-body">The checker won't flag:</p>
+
+  <ul class="govuk-list govuk-list--bullet">
+    <li>
+      general capitalisation issues - only on specific terms
+    </li>
+    <li>
+      syntax or grammatical errors
+    </li>
+    <li>
+      incorrect American spellings
+    </li>
+    <li>
+      puncutation, spacing and formatting issues
+    </li>
+    <li>
+      readability or structural problems
+    </li>
+  </ul>
+
+  <p class="govuk-body">
+    Fundamentally, the tool must be used by a trained, skilled content author. It was designed to speed up checking and QA tasks. It can't tell you whether your content is 'good' and meets user needs.
+  </p>
+
+
+  <h2 class="govuk-heading-m">
+    Which style guides the tool checks against
+  </h2>
+
+  <ul class="govuk-task-list">
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="https://design.homeoffice.gov.uk/content-style-guide" aria-describedby="HODS-style-guide-hint HODS-style-guide-status">
+          Home Office Design System, content style guide
+        </a>
+        <div id="HODS-style-guide-hint" class="govuk-task-list__hint">
+          100 terms done, 19 terms not done
         </div>
-        <textarea class="govuk-textarea" id="user-text" name="user-text" rows="20">{{data['user-text']}}</textarea>
-        <button class="govuk-button" type="submit" onclick="checkText()">Check text</button>
-      </fieldset>
-
-
-  </form>
-
-  <button onclick="clearText()" class="govuk-button govuk-button--warning" data-module="govuk-button">
-    Delete text
-  </button>
+      </div>
+      <div class="govuk-task-list__status" id="HODS-style-guide-status">
+        <strong class="govuk-tag govuk-tag--blue">
+          84% coverage
+        </strong>
+      </div>
+    </li>
+    <li class="govuk-task-list__item govuk-task-list__item--with-link">
+      <div class="govuk-task-list__name-and-hint">
+        <a class="govuk-link govuk-task-list__link" href="https://www.gov.uk/guidance/style-guide/a-to-z" aria-describedby="GDS-style-guide-status">
+          GDS style guide
+        </a>
+      </div>
+      <div class="govuk-task-list__status" id="GDS-style-guide-status">
+        <strong class="govuk-tag govuk-tag--grey">
+          Not started
+        </strong>
+      </div>
+    </li>
+  </ul>
   
 
-  <div id="results" class="govuk-body"></div>
 
- 
 </div>
 
 {% endblock %}
