--- a/app/views/results.html
+++ b/app/views/results.html
@@ -7,7 +7,9 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <h1 class="govuk-heading-m">There are style problems in your text:</h1>
+    <a href="javascript:window.history.back()" class="govuk-back-link">Back</a>
+
+    <h1 class="govuk-heading-l">There are style problems in your text:</h1>
 
     <div id="results" class="govuk-body">
       {{ results | safe }}
