Reworking entry pages + BAME acronym

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -77,37 +77,32 @@
   <h2 class="govuk-heading-m">
     Which style guides the tool checks against
   </h2>
-
-  <ul class="govuk-task-list">
-    <li class="govuk-task-list__item govuk-task-list__item--with-link">
-      <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="https://design.homeoffice.gov.uk/content-style-guide" aria-describedby="HODS-style-guide-hint HODS-style-guide-status">
-          Home Office Design System, content style guide
-        </a>
-        <div id="HODS-style-guide-hint" class="govuk-task-list__hint">
-          100 terms done, 19 terms not done
-        </div>
-      </div>
-      <div class="govuk-task-list__status" id="HODS-style-guide-status">
-        <strong class="govuk-tag govuk-tag--blue">
-          84% coverage
+  
+  <dl class="govuk-summary-list">
+    <div class="govuk-summary-list__row">
+      <dt class="govuk-summary-list__key">
+        Home Office content style guide
+      </dt>
+      <dd class="govuk-summary-list__value">
+        <strong class="govuk-tag govuk-tag--green">
+          91% coverage
         </strong>
-      </div>
-    </li>
-    <li class="govuk-task-list__item govuk-task-list__item--with-link">
-      <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="https://www.gov.uk/guidance/style-guide/a-to-z" aria-describedby="GDS-style-guide-status">
-          GDS style guide
-        </a>
-      </div>
-      <div class="govuk-task-list__status" id="GDS-style-guide-status">
+      </dd>
+      <dd class="govuk-summary-list__actions">
+        <a class="govuk-link" href="hods-page.html">View details<span class="govuk-visually-hidden"> of which Home Office entries the style checker covers</span></a>
+      </dd>
+    </div>
+    <div class="govuk-summary-list__row">
+      <dt class="govuk-summary-list__key">
+        GDS style guide
+      </dt>
+      <dd class="govuk-summary-list__value">
         <strong class="govuk-tag govuk-tag--grey">
           Not started
         </strong>
-      </div>
-    </li>
-  </ul>
-  
+      </dd>
+    </div>
+  </dl>
 
 
 </div>
