--- a/app/views/hods-page.html
+++ b/app/views/hods-page.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName="Home" %}
+{% set pageName="Home Office style guide coverage" %}
 
 {% block content %}
 
