HODS styling among other small updates

--- a/app/views/no-issues.html
+++ b/app/views/no-issues.html
@@ -10,7 +10,7 @@
     <h1 class="govuk-heading-l" id="header">No issues found</h1>
 
     <p class="govuk-body">
-      Your content complies with <a href="https://www.gov.uk/guidance/style-guide/a-to-z">GOV.UK</a> and <a href="https://design.homeoffice.gov.uk/content-style-guide">Home Office</a> style rules.
+      Your content complies with <a href="https://design.homeoffice.gov.uk/content-style-guide">Home Office</a> style rules.
     </p>
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
