--- a/app/views/index.html
+++ b/app/views/index.html
@@ -85,7 +85,7 @@
       </dt>
       <dd class="govuk-summary-list__value">
         <strong class="govuk-tag govuk-tag--green">
-          91% coverage
+          109/119 terms
         </strong>
       </dd>
       <dd class="govuk-summary-list__actions">
