Adding acronyms to front-page list

--- a/app/views/hods-page.html
+++ b/app/views/hods-page.html
@@ -31,6 +31,21 @@
       <dl class="govuk-summary-list">
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
+            Acronyms
+          </dt>
+          <dd class="govuk-summary-list__value">
+            <div class="govuk-task-list__status" id="HODS-style-guide-status">
+              <strong class="govuk-tag govuk-tag--grey">
+                On hold
+              </strong>
+            </div>
+          </dd>
+          <dd class="govuk-summary-list__value">
+            Waiting until GOV.UK style guide
+          </dd>
+        </div>
+        <div class="govuk-summary-list__row">
+          <dt class="govuk-summary-list__key">
             British nationality
           </dt>
           <dd class="govuk-summary-list__value">
