Removing an abbreviation on index.html

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -35,9 +35,6 @@
       words or abbreviations to avoid
     </li>
     <li>
-      for correct usage of terms
-    </li>
-    <li>
       where capitalisation is incorrect on specific terms
     </li>
     <li>
@@ -46,10 +43,10 @@
   </ul>
 
   <h2 class="govuk-heading-m">
-    What the checker won't check
+    What the checker wil not check
   </h2>
 
-  <p class="govuk-body">The checker won't flag:</p>
+  <p class="govuk-body">The checker will not flag:</p>
 
   <ul class="govuk-list govuk-list--bullet">
     <li>
