Minor UI fixes and acronym exemptions
* Added OANDA to list of exempt acronyms
* Tidied up content on the homepage
* Ensured the active font is Roboto

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -67,7 +67,7 @@
   </ul>
 
   <p class="govuk-body">
-    Fundamentally, the tool must be used by a trained, skilled content author. It was designed to speed up checking and QA tasks. It can't tell you whether your content is 'good' and meets user needs.
+    Fundamentally, the tool must be used by a trained, skilled content author. It was designed to speed up checking and quality assurance tasks. It cannot tell you whether your content is 'good' and meets user needs.
   </p>
 
 
@@ -91,7 +91,7 @@
     </div>
     <div class="govuk-summary-list__row">
       <dt class="govuk-summary-list__key">
-        GDS style guide
+        GOV.UK style guide
       </dt>
       <dd class="govuk-summary-list__value">
         <strong class="govuk-tag govuk-tag--grey">
