--- a/app/views/no-sentences.html
+++ b/app/views/no-sentences.html
@@ -10,7 +10,7 @@
     <h1 class="govuk-heading-l" id="header">We can't check your text</h1>
 
     <p class="govuk-body">
-      You must enter at least 1 full sentence that includes punctuation.
+      You must enter at least 1 full sentence with punctuation.
     </p>
 
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
