--- a/app/views/no-sentences.html
+++ b/app/views/no-sentences.html
@@ -7,7 +7,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <h1 class="govuk-heading-l" id="header">We can't check your text</h1>
+    <h1 class="govuk-heading-l" id="header">We cannot check your text</h1>
 
     <p class="govuk-body">
       You must enter at least 1 full sentence with punctuation.
