Addition of <hr> in results page

--- a/app/views/results.html
+++ b/app/views/results.html
@@ -14,8 +14,8 @@
     <div id="results" class="govuk-body">
       {{ results | safe }}
     </div>
-
-    <a href="check-text#user-text" class="govuk-button" id="back-to-text">Back to your text </a>
+    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+    <a href="check-text#user-text" class="govuk-button" id="back-to-text">Back to your text</a>
   
   </div>
  
