--- a/app/views/index.html
+++ b/app/views/index.html
@@ -43,7 +43,7 @@
   </ul>
 
   <h2 class="govuk-heading-m">
-    What the checker wil not check
+    What the checker will not check
   </h2>
 
   <p class="govuk-body">The checker will not flag:</p>
